Maybe fix review container layout issue

--- a/components/ReviewContainer.module.css
+++ b/components/ReviewContainer.module.css
@@ -1,14 +1,13 @@
 .container {
-  display: grid;
-  grid-template-rows: 60px 1fr 100px;
+  display: flex;
   text-align: center;
   flex-direction: column;
   font-size: 2em;
-  height: 100vh;
+  height: 100%;
 }
 
 .cardContainer {
-  flex: 1;
+  flex-grow: 1;
   overflow-y: auto;
   padding: 30px;
 }
@@ -17,6 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding: 20px 0;
 }
 
 .buttonContainer button {
